--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-white display-4" href="index.html#video2-h" aria-expanded="false"><span class="mbrib-video mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="#top" aria-expanded="false"><span class="mbrib-video mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Filme em Cartaz</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="VILOES.html">Vilões que foram com os porcos!</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#footer1-g">THIO</a></li></ul>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="header1 cid-r61KQrfev2 mbr-parallax-background" id="header1-h">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-r61KQrfev2 mbr-parallax-background" id="header1-h">
 
     
 
